# trslagent

./: .env.example  .gitignore  .ignore  AGENTS.md  README.md  config.example.toml  gdoc.example  input.example.json  main.py  pyproject.toml  pyrightconfig.json
infra/: nginx.conf  trslagent-email.service
src/: __init__.py  cli.py  config.py  doc_parser.py  email_processor.py  email_server.py  embedding.py  glossary_cache.py  glossary_manager.py  glossary_matcher.py  glossary_mgr_emb.py  language_detection.py  lemmatizer.py  llm.py  main.py  models.py  parser.py  reviewer.py  splitter.py  translator.py  utils.py
src/gdocs/: interface.py
src/glossary/: __init__.py  cache.py  get_abbrs.py  matcher.py  models.py  parser.py
tests/: conftest.py  test_cli.py  test_config.py  test_email_processor.py  test_email_server.py  test_email_settings.py  test_language_detection.py  test_lemmatizer.py  test_llm.py  test_main.py  test_reviewer.py  test_splitter.py  test_translator.py  test_utils.py
tests/glossary/: test_cache.py  test_matcher.py  test_models.py  test_parser.py
