[project]
name = "trslagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iso639-lang>=2.6.3",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.0",
    "openai>=2.31.0",
    "pyahocorasick>=2.3.0",
    "pydantic-settings>=2.1.0",
    "pymorphy3>=2.0.6",
    "spacy>=3.8.14",
]
