[project]
name = "trslagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "iso639-lang>=2.6.3",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.0",
    "openai>=2.31.0",
    "pyahocorasick>=2.3.0",
    "pydantic-settings>=2.1.0",
    "pymorphy3>=2.0.6",
    "spacy>=3.8.14",
    "tqdm>=4.67.3",
]

[project.scripts]
trslagent = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
markers = [
    "spacy: tests that require the en_core_web_sm spaCy model (skip with '-m \"not spacy\"')",
    "slow: tests that are slow to execute",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "respx>=0.22",
    "ruff>=0.15.17",
]
